<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="36dp"
    android:orientation="vertical"
    tools:context=".features.main.AboutProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/m_maroqi_abdul_jalil_05111940000143"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jalil"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/muchamad_maroqi_abdul_jalil"
        android:gravity="center"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/author_s_statement"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textAlignment="center"
                android:fontFamily="cursive"
                android:text="@string/jalil_statement"
                android:textColor="@color/colorPrimaryText"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
