<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".features.userdetail.UserDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_detail_avatar"
                    android:layout_width="112dp"
                    android:layout_height="112dp"
                    android:src="@drawable/user1"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/user_detail_avatar"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/user_detail_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="32sp"
                        android:textColor="@color/colorPrimaryText"/>

                    <TextView
                        android:id="@+id/user_detail_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textStyle="italic"
                        android:textSize="24sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables"
                        android:gravity="bottom">

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:src="@drawable/ic_room_black_36dp"
                            android:contentDescription="@string/location_icon" />

                        <TextView
                            android:id="@+id/user_detail_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/location"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/gridBackgrounfColorLight"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="true"
                app:cardElevation="3dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/baseline_supervisor_account_black_36dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/foll_icon" />

                    <TextView
                        android:id="@+id/user_detail_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/user_detail_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryText"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/gridBackgrounfColorLight"
                app:cardCornerRadius="4dp"
                app:cardPreventCornerOverlap="true"
                app:cardElevation="3dp"
                android:layout_marginBottom="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/repo_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_class_black_36dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:contentDescription="@string/repo_icon" />

                    <TextView
                        android:id="@+id/user_detail_repositories"
                        android:layout_width="wrap_content"
                        android:gravity="left"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@id/user_detail_company"
                        android:layout_toEndOf="@id/repo_icon"
                        android:layout_height="wrap_content"
                        android:text="@string/repositories"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="12sp"
                        tools:ignore="RtlHardcoded"/>

                    <TextView
                        android:id="@+id/user_detail_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_toStartOf="@id/comp_icon"
                        android:text="@string/company"
                        android:layout_centerInParent="true"
                        android:textSize="12sp"
                        android:textColor="@color/colorPrimaryText"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/comp_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_work_outline_black_36dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/company_icon" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_pager"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:tabTextColor="@color/textColorSecondary"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/user_foll_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gridBackgroundColor"/>
</LinearLayout>